uses an event loop to poll for reapable children.  It fires a CHLD
signal at the session that called &POE::Kernel::fork(), using POE's
soft signals to avoid potential problems with Perl's signal handling.

Changed the preforkedserver.perl example to use &POE::Kernel::fork(),
but the sample program seems to be hideously broken as designed.


0.08 1999.11.26
---------------

John Labovitz <watchguard.com!johnl> submitted a patch to change
Driver::SysRW's read block size.  He also pointed out that
Filter::Reference prefers to use freeze() instead of the more portable
nfreeze().  I applied a modified version of his block size patch, and
I changed Filter::Reference to prefer nfreeze().

There have been no complaints with the 0.07_xx subversions, and they
contain useful changes, so the version is bumped to 0.08.

Mentioned the "POE2" project in the README file.

Added an undocumented command line switch to samples/poing.perl that
specifies the maximum number of hours to run.

Changed the small/large queue limit for POE::Kernel::_enqueue_state
from 32 to 8.

Removed the hard requirement for optional modules: Storable;
Time::HiRes; HTTP::Request; HTTP::Response; HTTP::Status; URI::URL.
These aren't mandatory for basic POE things.


0.0704 1999.11.14
-----------------

Include some modules that were mistakenly left out of 0.0703.


0.0703 1999.08.20
-----------------

Removed closure optimizations from the Wheel classes.  The later
addition of $wheel->event() subtly broke them.

Added poing.perl, a multi-host ICMP ping program, to the samples
directory.  My ISP was down, so I hacked this together, "borrowing" a
lot of code from Net::Ping.  As such, it's neither friendly to
configure nor commented.

Sessions' "default" option didn't confess, contrary to the
documentation.


0.0702 1999.07.30
-----------------

Made BindAddress optional for UNIX client sockets.  It's still
required for server sockets.  Updated the documentation for the